--- a/frontend/src/app/index.scss
+++ b/frontend/src/app/index.scss
@@ -10,9 +10,11 @@
     font-family:
         Noto Sans,
         'sans-serif';
+}
 
+body {
     background: black;
-    //margin: 0 auto;
+
 }
 
 .h1,
