--- a/frontend/src/app/index.scss
+++ b/frontend/src/app/index.scss
@@ -238,4 +238,8 @@ input[type='number']::-webkit-outer-spin-button {
     object-fit: contain;
     border: 1px solid rgba(0, 183, 255, 0.6);
     border-radius: 4px;
+
+    &.invert {
+        filter: brightness(0) invert(1);
+    }
 }
